--- a/mirgovorit/src/.env
+++ b/mirgovorit/src/.env
@@ -6,6 +6,7 @@ LOGOUT_URL='/logout'
 LOGIN_REDIRECT_URL='/'
 LOGOUT_REDIRECT_URL='/'
 DOMAIN_NAME='dbms_template_domain'
+TEST=True
 
 # postgres settings
 POSTGRES_DB=
