--- a/mirgovorit/src/.env
+++ b/mirgovorit/src/.env
@@ -1,19 +1,19 @@
 # django settings
 SECRET_KEY='pw+*a^45y7s_f(im29%4ot2222m1h7zed4w+$03_trf4)0)!l!'
-DEBUG=False
-LOGIN_URL='/login'
-LOGOUT_URL='/logout'
+DEBUG=True
+LOGIN_URL='/admin/login/'
+LOGOUT_URL='/admin/logout/'
 LOGIN_REDIRECT_URL='/'
 LOGOUT_REDIRECT_URL='/'
 DOMAIN_NAME='dbms_template_domain'
-TEST=True
+
 
 # postgres settings
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
+POSTGRES_DB='mixed'
+POSTGRES_USER='postgres'
+POSTGRES_PASSWORD='postgres'
+POSTGRES_HOST='localhost'
+POSTGRES_PORT=5432
 
 # asgi settings
 REDIS_HOST='127.0.0.1'
@@ -23,4 +23,3 @@ CELERY_RESULT_BACKEND='redis://127.0.0.1:6379'
 CELERY_ACCEPT_CONTENT='json'
 CELERY_TASK_SERIALIZER='json'
 CELERY_RESULT_SERIALIZER='json'
-
